# crewAI-examples

./: README.md
crews/stock_analysis/: .env.example  JAEGER_TRACING.md  README.md  pyproject.toml
crews/stock_analysis/src/stock_analysis/: crew.py
crews/stock_analysis/src/stock_analysis/tools/: calculator_tool.py  sec_tools_simple.py
